--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-image: url(felix-mooneeram-evlkOfkQ5rE-unsplash.jpg);
   background-repeat: no-repeat;
@@ -8,6 +14,8 @@ body {
 
 body * {
   font-family: "Montserrat", sans-serif;
+  list-style: none;
+  line-height: 160%;
 }
 
 main * {
@@ -20,10 +28,38 @@ main {
   margin: auto;
 }
 
-h1 {
+section h1 {
   color: white;
+  font-size: 24px;
 }
 
-p {
-  color: white;
+section p {
+  color: #c1c1c1;
+  font-size: 16px;
+}
+
+/*.box_filmes_series {
+  width: 520px;
+  height: 294px;
+  background-color: #262629;
+}
+
+.box_social {
+  width: 520px;
+  height: 176px;
+  background-color: #262629;
+}*/
+
+ul {
+  display: flex;
+}
+
+ul img {
+  width: 100px;
+  height: 150px;
+}
+
+.imgs_social {
+  width: 32px;
+  height: 32px;
 }
