--- a/style.css
+++ b/style.css
@@ -18,9 +18,21 @@ body * {
   line-height: 160%;
 }
 
-main * {
-  border: 1px solid red;
+header {
+  display: flex;
+  justify-content: center;
 }
+.foto {
+  /*width: 50px;
+  height: 50px;*/
+  color: blue;
+  margin-bottom: 35px;
+  margin-top: 5%;
+}
+
+/*main * {
+  border: 1px solid rgb(17, 255, 0);
+}*/
 
 main {
   max-width: 580px;
@@ -50,16 +62,28 @@ section p {
   background-color: #262629;
 }*/
 
-ul {
+.box_filmes_series ul {
   display: flex;
+  justify-content: space-between;
 }
 
 ul img {
   width: 100px;
   height: 150px;
+  margin-right: 30px;
+  margin: 5px;
 }
 
-.imgs_social {
-  width: 32px;
-  height: 32px;
+ul a {
+  margin: 0px;
 }
+.imgs_social {
+  width: 40px;
+  height: 40px;
+  display: flex;
+}
+
+/*.box_social ul img {
+  display: flex;
+  justify-content: space-around;
+}*/
