--- a/style.css
+++ b/style.css
@@ -22,12 +22,14 @@ header {
   display: flex;
   justify-content: center;
 }
-.foto {
+.foto img {
   /*width: 50px;
   height: 50px;*/
-  color: blue;
-  margin-bottom: 35px;
-  margin-top: 5%;
+  margin-bottom: 20%px;
+  margin-top: 35%;
+  border-radius: 50%;
+  border-style: groove;
+  border-color: red;
 }
 
 /*main * {
