--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  --gradient: linear-gradient(rgb(0, 0, 0) rgb(209, 1, 1) rgb(180, 0, 0));
+}
+
 body {
   background-image: url(felix-mooneeram-evlkOfkQ5rE-unsplash.jpg);
   background-repeat: no-repeat;
@@ -25,11 +29,12 @@ header {
 .foto img {
   /*width: 50px;
   height: 50px;*/
-  margin-bottom: 20%px;
+  margin-bottom: 20%;
   margin-top: 35%;
   border-radius: 50%;
-  border-style: groove;
-  border-color: red;
+  border: 4px solid;
+  border-color: var(--gradient) 1;
+  border-image: var(--gradient) 1;
 }
 
 /*main * {
@@ -40,6 +45,7 @@ main {
   max-width: 580px;
   width: 90%;
   margin: auto;
+  display: grid;
 }
 
 section h1 {
@@ -74,6 +80,7 @@ ul img {
   height: 150px;
   margin-right: 30px;
   margin: 5px;
+  border-radius: 5%;
 }
 
 ul a {
@@ -89,3 +96,11 @@ ul a {
   display: flex;
   justify-content: space-around;
 }*/
+
+.filmes {
+  background-color: #f00322;
+}
+
+.series {
+  background-color: #f00322;
+}
