--- a/style1.css
+++ b/style1.css
@@ -50,6 +50,12 @@ header div {
   border-radius: 50%;
   display: flex;
   padding: 4px;
+
+  transition: transform 0.3s;
+}
+
+header div:hover {
+  transform: scale(1.1);
 }
 
 header img {
@@ -73,6 +79,14 @@ section div {
   padding: 32px;
   padding-top: 24px;
   border-radius: 8px;
+}
+
+section ul li {
+  transition: transform 0.3s;
+}
+
+section ul li:hover {
+  transform: scale(1.1);
 }
 
 ul {
